# aoc-2024

./: Cargo.toml
data/: puzzle-10-test-1.txt  puzzle-10-test-2.txt  puzzle-10-test.txt  puzzle-16-test.txt  puzzle-6-test.txt  puzzle-9-test.txt
src/: Untitled-1.txt
