[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "puzzle-1"
[[bin]]
name = "puzzle-2"
[[bin]]
name = "puzzle-3"
[[bin]]
name = "puzzle-4"
[[bin]]
name = "puzzle-5"
[[bin]]
name = "puzzle-6"
[[bin]]
name = "puzzle-7"
[[bin]]
name = "puzzle-8"
[dependencies]
gcd = "2.3.0"
