[package]
name = "aoc-2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "puzzle-1"
[[bin]]
name = "puzzle-2"
[[bin]]
name = "puzzle-3"
[[bin]]
name = "puzzle-4"
[[bin]]
name = "puzzle-5"
[[bin]]
name = "puzzle-6"
[[bin]]
name = "puzzle-7"
[[bin]]
name = "puzzle-8"
[[bin]]
name = "puzzle-9"
[[bin]]
name = "puzzle-10"
[[bin]]
name = "puzzle-11"
[[bin]]
name = "puzzle-12"
[[bin]]
name = "puzzle-13"
[[bin]]
name = "puzzle-14"
[[bin]]
name = "puzzle-15"
[[bin]]
name = "puzzle-16"
[[bin]]
name = "puzzle-17"
[[bin]]
name = "puzzle-18"
[[bin]]
name = "puzzle-19"
[[bin]]
name = "puzzle-20"

[dependencies]
gcd = "2.3.0" # For puzzle 8
